tweak configuration